<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/descripcion"
        android:hint="Muestra de Datos"
        android:textAlignment="center"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/lisView"
        android:layout_width="280dp"
        android:layout_height="115dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview" />


    <Button
        android:id="@+id/btnoption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_select_cas"
        android:onClick="nextEnviar"
        android:text="@string/btnNext"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lisView"

        />

    <ImageButton
        android:id="@+id/jpgGepe"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"

        android:contentDescription="@string/descripcion"
        android:onClick="NavegarIconMensaje"
        app:layout_constraintBaseline_toTopOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toEndOf="@+id/lisView"
        app:layout_constraintTop_toBottomOf="@+id/txtview"
        app:srcCompat="@drawable/ic_geekipedia"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/pngMano"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/descripcion"
        android:onClick="ManoDimeAction"
        app:layout_constraintBottom_toTopOf="@+id/btnoption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lisView"
        app:layout_constraintTop_toBottomOf="@+id/jpgGepe"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_mano"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="#05603B"

        android:onClick="Registrar"
        android:text="@string/registrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpass" />

    <EditText
        android:id="@+id/txtname"
        android:hint="@string/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/btnoption"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_pass"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtname"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>